index.css
:root {
    --text-color: #e2dee3;
    --highlight-color: #f1f6f7;
    --text-color2: #a7a6c6;
    --link-color: #6584b5;
    --bg-color: #000000;
    --bg-color2: #343441;
    --bg-color3: #34344122;
    --bg-color4: #000000e8;
    --bg-color5: #111115;
    --bg-color6: #343441e8;
    --body-font: 'Kodchasan', sans-serif;
    --header-font: 'Amatic SC', sans-serif;
    --subheader-font: 'Economica', sans-serif;
}



body {
    font-family: var(--body-font);
    color: var(--text-color);
    background-color: var(--bg-color);
    background-image: url(./images/hw-web-bg.png);
    background-position: center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: cover;
    overflow: hidden;
    margin: 0;
    cursor: default;
    bottom: 0;
    position: static;
}
button {
    padding: 0;
    border: 0;
    margin: 0;
    background-color: #00000000;
    cursor: pointer;
}
.link {
    color: var(--link-color);
    text-decoration: none;
    transition: 0.3s;
}
.link:hover {
    color: var(--highlight-color);
    transition: 0.3s;
}
@media only screen and (max-width: 750px) {
    .link {
        transition: 0.1s;
    }
    .link:hover {
        color: var(--link-color);
    }
    .link:active {
        color: var(--highlight-color);
        transition: 0.1s;
    }
}
.highlight {
    color: var(--highlight-color)
}
.back-button {
    display: block;
    float: right;
    padding-right: 20px;
    font-size: 30px;
}
.back-button a {
    text-decoration: none;
    color: var(--link-color);
    transition: 0.3s;
}
.back-button a:hover {
    color: var(--highlight-color);
    letter-spacing: 2px;
    transition: 0.3s;
}
.loading {
    text-align: center;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 20pt;
    position: relative;
    top: 25vh;
}



.content-container {
    max-width: 1400px;
    max-height: 100vh;
    overflow: hidden;
    position: fixed;
    right: 0;
    left: 0;
    margin: auto;
}



.deco-container {
    width: 1400px;
    max-height: 100vh;
    overflow: hidden;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    margin: auto;
    z-index: -1;
}
.deco-1 {
    min-height: 100vh;
    width: 12px;
    float: left;
}
.deco-2 {
    min-height: 100vh;
    width: 12px;
    float: right;
    transform: rotate(180deg);
}
@media only screen and (max-width: 750px) {
    .deco-container {
        display: none;
    }
}


.header-link {
    text-decoration: none;
    color: var(--text-color);
}



.nav-container {
    float: left;
    width: 305px;
    max-height: 100vh;
    position: absolute;
}
.nav-container img {
    z-index: 2;
    position: relative;
    left: 10px;
}
.nav-links {
    display: flex;
    justify-content: center;
    width: 305px;
    max-height: 30vh;
    position: fixed;
    z-index: 2;
    top: calc(200px + 10vh)
}
.nav-container ul {
    list-style-type: none;
    text-align: center;
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 23pt;
    padding: 0;
    margin: 0;
}
.nav-container li {
    margin: calc(100vh / 30) 0px;
}
.nav-container a {
    text-decoration: none;
    color: var(--text-color2);
    transition: 0.3s;
}
.nav-container a:hover {
    color: var(--link-color);
    letter-spacing: 2px;
    transition: 0.3s;
}
.nav-bg {
    background-color: var(--bg-color2);
    width: 205px;
    margin: 0px 50px;
    height: 100vh;
    -webkit-mask-image: linear-gradient(to bottom, transparent 10%, black 60%);
    mask-image: linear-gradient(to bottom, transparent 10%, black 90%);
    top: 0px;
    position: fixed;
}
@media only screen and (max-width: 750px) {
    .nav-container {
        float: none;
        width: 100%;
        height: 400px;
        max-height: 400px;
        min-height: 400px;
    }
    .nav-container img {
        height: 180px;
        width: 180px;
        left: -40px;
        top: -40px;
    }   
    .nav-links {
        justify-content: right;
        background-color: var(--bg-color6);
        top: 100px;
        right: 0;
        padding: 0 20px 0 0;
        width: 150px;
        max-height: max-content;
        display: none;
        z-index: 0;
    }
    .nav-container ul {
        text-align: right;
    }
    .nav-container li {
        margin: 30px 0;
    }
    .nav-container a:hover {
        letter-spacing: normal;
        color: var(--text-color2);
    }
    .nav-container a:active {
        color: var(--highlight-color);
    }
    .nav-bg {
        background-color: var(--bg-color5);
        -webkit-mask-image: linear-gradient(to right, transparent 0%, black 50%);
        mask-image: linear-gradient(to right, transparent 0%, black 50%);
        width: 100%;
        left: 0;
        height: 100px;
    }
}



.header {
    font-family: var(--header-font);
    font-weight: bold;
    font-size: 80px;
    color: var(--text-color);
    margin: 50px 0px 0px 325px;
    padding: 0;
}
.subheader {
    font-family: var(--subheader-font);
    color: var(--text-color2);
    font-size: 25pt;
    margin: 0 0 0 330px;
    font-weight: lighter;
    padding: 0;
}
.nav-button {
    display: none;
    position: fixed;
    top: 50px;
    right: 0;
    font-size: 35pt;
    cursor: pointer;
    transition: 0.1s;
}
@media only screen and (max-width: 750px) {
    .body-header{
        width: calc(100vw - 130px);
        height: 100px;
        display: flex;
        position: fixed;
        top: 0;
        left: 130px;
        flex-direction: column;
    }
    .header {
        font-size: 30pt;
        float: left;
        margin: 0;
    }
    .subheader {
        font-size: 17pt;
        float: left;
        margin: 0;
        width: 50vw;
        line-height: 20px;
        opacity: 0.5;
    }
    .nav-button {
        display: block;
    }
}
/* ... */

